opam-version: "2.0"
version: "1.0.5"
maintainer: "daniil+opam@baturin.org"
authors: ["Daniil Baturin <daniil+otoml@baturin.org>"]
homepage: "https://github.com/dmbaturin/otoml"
bug-reports: "https://github.com/dmbaturin/otoml/issues"
dev-repo: "git+https://github.com/dmbaturin/otoml.git"
license: "MIT"
build: [
  [
    "dune" "build"
    "-p" name
    "-j" jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "menhir"
  "menhirLib" {>= "20200525"}
  "dune" {>= "2.0.0"}
  "uutf" {>= "1.0.0"}
  "ounit2" {with-test}
  "odoc" {with-doc}
]
synopsis: "TOML parsing, manipulation, and pretty-printing library (1.0.0-compliant)"
description: """
OTOML is a library for parsing, manipulating, and pretty-printing TOML files.

* Fully 1.0.0-compliant.
* No extra dependencies: default implementation uses native numbers and represents dates as strings.
* Provides a functor for building alternative implementations: plug your own bignum and calendar libraries if required.
* Informative parse error reporting.
* Pretty-printer offers flexible indentation options.

"""
